# active-bagging-learning

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yml
active_learning/: __init__.py  base.py
active_learning/benchmark/: __init__.py  analyse.py  base.py  benchmark.py  benchmark_config.py  functions.py  gaussian_process.py  naive_1d.py  naive_2d.py  test.py  utils.py
active_learning/benchmark/cases/: benchmark_2d.py  benchmark_example.py  benchmark_gaussian_process.py  benchmark_sampling.py
active_learning/components/: active_criterion.py  latin_square.py  query_strategies.py  utils.py
active_learning/examples/: example_1D.py
benchmark/: analyse.py  gaussian_process.py  gp_naive.py  naive.py  naive_1d.py  naive_2d.py  run2d.sh  utils.py
benchmark/figures/: structural_analysis.py
data/: functions.py
doc/: example_1D.md
examples/: 1d_example.py  base_procedure.py  finite_set.py
examples/2d_benchmark/: run2d.sh
examples/2d_benchmark/figures/: structural_analysis.py
examples/ideas/: 1d_example.py  finite_set.py
src/: __init__.py  base.py
src/active_learning/: __init__.py  base.py
src/active_learning/benchmark/: analyse.py  functions.py  gaussian_process.py  naive_1d.py  naive_2d.py  utils.py
src/active_learning/components/: __init__.py  active_criterion.py  query_strategies.py  test.py
src/active_learning/components/sampling/: latin_square.py
src/active_learning/data/: functions.py
src/active_learning/models/: smt_api.py
src/components/: query_strategies.py
src/sampling/: latin_square.py
src/utils/: analysis.py
test/: test_active_criterion.py  test_base.py  test_benchmark.py  test_latin_square.py  test_query_strategies.py
