[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
package-name = "active_learning"

[project]
name = "active_learning"
version = "2024.2.1"
description = ""
authors = [{ name = 'Vincent Laurent', email = 'vlaurent@mews-labs.com' }]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = '>=3.9'


dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    ]

[tool.coverage.run]
omit = [
    # omit anything in a .local directory anywhere
    "*/benchmark/*",
    ]